# omniBotProto

./: .gitignore  LICENSE  README.md
BotTracker/: BotTracker.cpp  BotTracker.h  CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  GLProgram.cpp  GLProgram.h  GLTexture.cpp  GLTexture.h  GLWindow.cpp  GLWindow.h  KeyHandler.cpp  KeyHandler.h  PositionDrawer.cpp  PositionHandler.cpp  PositionHandler.h  RadioHandler.cpp  cameracontrol.cpp  graphics.cpp  graphics.h  main.cpp  picam.cpp  simplevertshader.glsl
BotTracker/camera/: camera.cpp  camera.h  cameracontrol.cpp
Game_PC/assets/: grass.frag  grassShadow.geom  shader.vert  shaderPlain.vert  shadow_shader.frag
Game_PC/src/: ArduinoHandler.cpp  ArduinoHandler.hpp  Butterfly.cpp  Butterfly.hpp  ButterflyRenderer.cpp  ButterflyRenderer.hpp  Calibrator.cpp  Calibrator.hpp  CameraHandler.cpp  CameraHandler.hpp  CameraHandler2.cpp  CameraHandler2.hpp  FloorMapping.cpp  FloorMapping.hpp  FloorTextureGenerator.cpp  FloorTextureGenerator.hpp  FlowerPatch.cpp  FlowerPatch.hpp  FlowerRenderer.cpp  FlowerRenderer.hpp  GameRenderer.cpp  GameRenderer.hpp  Game_PCApp.cpp  Game_PCapp.cpp  GrassPatch.cpp  GrassPatch.hpp  GrassRenderer.cpp  GrassRenderer.hpp  Level.cpp  Level.hpp  LevelTile.cpp  LevelTile.hpp  ObjectMap.cpp  ObjectMap.hpp  Particle.cpp  Particle.hpp  ParticleHandler.cpp  ParticleHandler.hpp  Player.cpp  Player.hpp  (+11 more)
OmnibotGame/assets/: MonValley_G_DirtRoad_3k_cube_irradiance.hdr  MonValley_G_DirtRoad_3k_cube_specular.hdr  imgui.ini
OmnibotGame/src/: FLowerHandler.cpp  FLowerHandler.h  FloorMapping.cpp  FloorMapping.hpp  FloorTextureGenerator.cpp  FloorTextureGenerator.hpp  Flower.h  FlowerTile.cpp  (+39 more)
cad/: holder.dxf  top.dxf
omnibotcontroler_RPI/: BotTracker.h  CMakeLists.txt  CameraHandler.cpp  GLTexture.cpp  GLTexture.h  PositionDrawer.cpp  PositionDrawer.h  RadioHandler.h
(+49 files in other folders)
